src/com/mypractice/java8/chap9/README
To try out the scenario described in section 8.1 on Evolving APIs you need to do the following:

compile individual files as follows from the directory src/main/java:

javac com.mypractice.java8/chap8/Resizable.java
javac com.mypractice.java8/chap8/Ellipse.java
javac com.mypractice.java8/chap8/Utils.java
javac com.mypractice.java8/chap8/Game.java

You can run the application and everything will work:

java com.mypractice.java8/chap8/Game

You can now modify the interface Resizable and add the method "setRelativeSize".
Compile and run, no problem:

javac com.mypractice.java8/chap8/Resizable.java

Now modify Utils to use the new setRelativeSize method available on all kinds of Resizable.
Just uncomment the appropriate the line in Utils, compile, run, and you'll have a surprise!

Exception in thread "main" java.lang.AbstractMethodError: com.mypractice.java8.chap8.Square.setRelativeSize(II)V

Note also that recompiling the whole application will fail because Ellipse doesn't implement
the new method setRelativeSize:

javac com.mypractice.java8/chap8/Ellipse.java
com.mypractice.java8/chap7/Ellipse.java:6: error: Ellipse is not abstract and does not override abstract method setRelativeSize(int,int) in Resizable
public class Ellipse implements Resizable {
       ^
1 error

The problem can be fixed by ensuring that setRelativeSize is a default method:

public default void setRelativeSize(int widthFactor, int heightFactor){
    // a default implementation
}
